objects/OF_CQS_Ispezione__c.object
<CustomObject>
    <fields>
        <fullName>CQS_ISP_Somma_Tot_Max__c</fullName>
        <formula>(IF(!ISPICKVAL(CQS_ISP_PSC__c,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_ISP_POS__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Notifica_prel_corretta_valida__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_DURC_regolare__c,&apos;N/A&apos;),3, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Attivita_Imprese_autorizzate_OF__c,&apos;N/A&apos;),1,0)+ 
IF(!ISPICKVAL(CQS_ISP_Autorizzazione_amm_competente__c,&apos;N/A&apos;),3, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Presenza_prog_cartografie_enti__c,&apos;N/A&apos;),3, 0)+ 
IF(!ISPICKVAL(CQS_ISP_indagini_preventive_scavo__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Accantieramento_conforme__c,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Esposizione_Cartello__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_RispettoCodice_SegnaleticaStrada__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Idoneit_delimit_Cantiere_AD__c,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Buono_stato_cartellonistica__c,&apos;N/A&apos;),1,0)+ 
IF(!ISPICKVAL(CQS_ISP_assicurata_viabilita__c,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Passaggi_su_scavi_idonei__c,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Pozzetti_non_pericolosi__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL( CQS_ISP_Presenza_WC__c,&apos;N/A&apos;),1, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Presenti_autorizzati__c ,&apos;N/A&apos;),3, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Tesserino_Check__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Preposto_Cantiere_Presente__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Addetto_PS_presente__c,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Addetto_Antincendio_presente__c,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_ISP_DPI_idonei_in_dotazione__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_DPI_lavorazioni_in_quota__c,&apos;N/A&apos;),3, 0)+ 
IF(!ISPICKVAL(CQS_ISP_DPI_rischio_elettrico__c,&apos;N/A&apos;),3, 0)+ 
IF(!ISPICKVAL(Presenza_Moviere_qualora_necessario__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(Personale_dotato_di_quanto_richiesto__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Mezzi_Attrezzature_autorizati__c ,&apos;N/A&apos;),3, 0)+ 
IF(!ISPICKVAL(CQS_ISP_conformita_mezzi_attrezzature__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Documentazione_verifiche_legge__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Marcatura_CE__c,&apos;N/A&apos;),1, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Documentazione_noli_a_freddo__c,&apos;N/A&apos;),1,0)+ 
IF(!ISPICKVAL(CQS_ISP_attrezzature_sollevamento__c,&apos;N/A&apos;),3, 0)+ 
IF(!ISPICKVAL(Cassetta_primo_soccorso_conforme__c ,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_Estintore_con_cartellino_e_revisione__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(Autorizzazioni_ENEL_prossimit_E_Distrib__c ,&apos;N/A&apos;),1, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Presenza_Profili_E_Distrib__c,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Dotazione_DPI_3_Cat_eDist__c,&apos;N/A&apos;),3,0))</formula>
        <label>Somma Totale Massimo Ispezione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Somma_Totale_Domande__c</fullName>
        <formula>(IF(ISPICKVAL(CQS_ISP_PSC__c,&apos;Sì&apos;),2, 0)+ 
IF(ISPICKVAL(CQS_ISP_POS__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Notifica_prel_corretta_valida__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL(CQS_ISP_DURC_regolare__c,&apos;Sì&apos;),3, 0)+ 
IF(ISPICKVAL(CQS_ISP_Attivita_Imprese_autorizzate_OF__c,&apos;Sì&apos;),1,0)+ 
IF(ISPICKVAL(CQS_ISP_Autorizzazione_amm_competente__c,&apos;Sì&apos;),3, 0)+ 
IF(ISPICKVAL(CQS_ISP_Presenza_prog_cartografie_enti__c,&apos;Sì&apos;),3, 0)+ 
IF(ISPICKVAL(CQS_ISP_indagini_preventive_scavo__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Accantieramento_conforme__c,&apos;Sì&apos;),2, 0)+ 
IF(ISPICKVAL(CQS_ISP_Esposizione_Cartello__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_RispettoCodice_SegnaleticaStrada__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Idoneit_delimit_Cantiere_AD__c,&apos;Sì&apos;),2, 0)+ 
IF(ISPICKVAL(CQS_ISP_Buono_stato_cartellonistica__c,&apos;Sì&apos;),1,0)+ 
IF(ISPICKVAL(CQS_ISP_assicurata_viabilita__c,&apos;Sì&apos;),2, 0)+ 
IF(ISPICKVAL(CQS_ISP_Passaggi_su_scavi_idonei__c,&apos;Sì&apos;),2, 0)+ 
IF(ISPICKVAL(CQS_ISP_Pozzetti_non_pericolosi__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL( CQS_ISP_Presenza_WC__c,&apos;Sì&apos;),1, 0)+ 
IF(ISPICKVAL(CQS_ISP_Presenti_autorizzati__c ,&apos;Sì&apos;),3, 0)+ 
IF(ISPICKVAL(CQS_ISP_Tesserino_Check__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Preposto_Cantiere_Presente__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Addetto_PS_presente__c,&apos;Sì&apos;),2, 0)+ 
IF(ISPICKVAL(CQS_ISP_Addetto_Antincendio_presente__c,&apos;Sì&apos;),2, 0)+ 
IF(ISPICKVAL(CQS_ISP_DPI_idonei_in_dotazione__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_DPI_lavorazioni_in_quota__c,&apos;Sì&apos;),3, 0)+ 
IF(ISPICKVAL(CQS_ISP_DPI_rischio_elettrico__c,&apos;Sì&apos;),3, 0)+ 
IF(ISPICKVAL(Presenza_Moviere_qualora_necessario__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(Personale_dotato_di_quanto_richiesto__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Mezzi_Attrezzature_autorizati__c ,&apos;Sì&apos;),3, 0)+ 
IF(ISPICKVAL(CQS_ISP_conformita_mezzi_attrezzature__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Documentazione_verifiche_legge__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Marcatura_CE__c,&apos;Sì&apos;),1, 0)+ 
IF(ISPICKVAL(CQS_ISP_Documentazione_noli_a_freddo__c,&apos;Sì&apos;),1,0)+ 
IF(ISPICKVAL(CQS_ISP_attrezzature_sollevamento__c,&apos;Sì&apos;),3, 0)+ 
IF(ISPICKVAL(Cassetta_primo_soccorso_conforme__c ,&apos;Sì&apos;),2, 0)+ 
IF(ISPICKVAL(CQS_Estintore_con_cartellino_e_revisione__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(Autorizzazioni_ENEL_prossimit_E_Distrib__c ,&apos;Sì&apos;),1, 0)+ 
IF(ISPICKVAL(CQS_ISP_Presenza_Profili_E_Distrib__c,&apos;Sì&apos;),2, 0)+ 
IF(ISPICKVAL(CQS_ISP_Dotazione_DPI_3_Cat_eDist__c,&apos;Sì&apos;),3,0))</formula>
        <label>Somma Totale Domande Ispezione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Tesserino_Check__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Tesserino dei lavoratori indossato e rispondente al D.Lgs 81/2008</inlineHelpText>
        <label>Tesserino rispondente al D.Lgs 81/2008</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_Tot_Max_Doc_min__c</fullName>
        <formula>IF(RecordType.DeveloperName==&apos;Ispezione_Sicurezza_2018_06&apos;,(IF(!ISPICKVAL(CQS_ISP_PSC__c,&apos;N/A&apos;),3, 0)+ 
IF(!ISPICKVAL(CQS_ISP_POS__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Notifica_prel_corretta_valida__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_IspS_Presenza_riferimenti_emergenza__c,&apos;N/A&apos;),1,0)+ 
IF(!ISPICKVAL(CQS_IspS_Subappalto_autorizzato_OF__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_Autorizzazione_amm_competente__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_IspS_Presenza_cartografie_enti__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_indagini_preventive_scavo__c,&apos;N/A&apos;),2,0)),(IF(!ISPICKVAL(CQS_ISP_PSC__c,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_ISP_POS__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Notifica_prel_corretta_valida__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_DURC_regolare__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_Attivita_Imprese_autorizzate_OF__c,&apos;N/A&apos;),1,0)+ 
IF(!ISPICKVAL(CQS_ISP_Autorizzazione_amm_competente__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_Presenza_prog_cartografie_enti__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_indagini_preventive_scavo__c,&apos;N/A&apos;),2,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Massimo Documentazione Minima</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Tot_Max_E_Distr__c</fullName>
        <formula>(IF(!ISPICKVAL(Autorizzazioni_ENEL_prossimit_E_Distrib__c ,&apos;N/A&apos;),1, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Presenza_Profili_E_Distrib__c,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_ISP_Dotazione_DPI_3_Cat_eDist__c,&apos;N/A&apos;),3,0))</formula>
        <label>Totale Massimo E-Distribuzione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Tot_Max_Mezzi_Attrezz__c</fullName>
        <formula>IF(RecordType.DeveloperName==&apos;Ispezione_Sicurezza_2018_06&apos;,(IF(!ISPICKVAL(CQS_IspS_Autorizzati_e_presenti_nel_POS__c,&apos;N/A&apos;),3,0)+
IF(!ISPICKVAL(CQS_IspS_Sono_in_buono_stato__c,&apos;N/A&apos;),1,0)+
IF(!ISPICKVAL(CQS_IspS_Libretti_rev_mezzi_presenti__c,&apos;N/A&apos;),2,0)+
IF(!ISPICKVAL(CQS_ISP_Marcatura_CE__c,&apos;N/A&apos;),1,0)+
IF(!ISPICKVAL(CQS_ISP_Documentazione_noli_a_freddo__c,&apos;N/A&apos;),1,0)+
IF(!ISPICKVAL(CQS_ISP_attrezzature_sollevamento__c,&apos;N/A&apos;),3,0)), (IF(!ISPICKVAL(CQS_ISP_Mezzi_Attrezzature_autorizati__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_conformita_mezzi_attrezzature__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Documentazione_verifiche_legge__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Marcatura_CE__c,&apos;N/A&apos;),1,0)+ 
IF(!ISPICKVAL(CQS_ISP_Documentazione_noli_a_freddo__c,&apos;N/A&apos;),1,0)+ 
IF(!ISPICKVAL(CQS_ISP_attrezzature_sollevamento__c,&apos;N/A&apos;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Massimo Mezzi Attrezzature</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Tot_Max_Org_Cantiere__c</fullName>
        <formula>IF(RecordType.DeveloperName==&apos;Ispezione_Sicurezza_2018_06&apos;, (IF(!ISPICKVAL(CQS_IspS_Accantieramento_conforme_a_PSC__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Esposizione_Cartello__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_IspS_Segnaletica_stradale_suff__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Idoneit_delimit_Cantiere_AD__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Buono_stato_cartellonistica__c,&apos;N/A&apos;),1,0)+ 
IF(!ISPICKVAL(CQS_IspS_Viabilit_come_ordinanza__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_IspS_Protezione_scavi_in_minitrincea__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_IspS_Protezione_scavi_trad_pozzetti__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_IspS_Utilizzo_DPC_rischi_particolari__c,&apos;N/A&apos;),2,0)), (IF(!ISPICKVAL(CQS_ISP_Accantieramento_conforme__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Esposizione_Cartello__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_RispettoCodice_SegnaleticaStrada__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Idoneit_delimit_Cantiere_AD__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Buono_stato_cartellonistica__c,&apos;N/A&apos;),1,0)+ 
IF(!ISPICKVAL(CQS_ISP_assicurata_viabilita__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Passaggi_su_scavi_idonei__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Pozzetti_non_pericolosi__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_Presenza_WC__c,&apos;N/A&apos;),1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Massimo Organizzazione Cantiere</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Tot_Max_Pers_Cantiere__c</fullName>
        <formula>IF(RecordType.DeveloperName==&apos;Ispezione_Sicurezza_2018_06&apos;, (IF(!ISPICKVAL(CQS_ISP_Presenti_autorizzati__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_Tesserino_Check__c,&apos;N/A&apos;),1,0)+ 
IF(!ISPICKVAL(CQS_ISP_Preposto_Cantiere_Presente__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_IspS_Addetto_primo_soccorso_presente__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Addetto_Antincendio_presente__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_DPI_idonei_in_dotazione__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_IspS_DPI_3_categoria_utilizzati_OK__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_Presenza_Profili_E_Distrib__c,&apos;N/A&apos;),1,0)+ 
IF(!ISPICKVAL(Presenza_Moviere_qualora_necessario__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_IspS_Formazione_HS_conforme_mansione__c,&apos;N/A&apos;),2,0)), (IF(!ISPICKVAL(CQS_ISP_Presenti_autorizzati__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_Tesserino_Check__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Preposto_Cantiere_Presente__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Addetto_PS_presente__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_Addetto_Antincendio_presente__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_DPI_idonei_in_dotazione__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(CQS_ISP_DPI_lavorazioni_in_quota__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(CQS_ISP_DPI_rischio_elettrico__c,&apos;N/A&apos;),3,0)+ 
IF(!ISPICKVAL(Presenza_Moviere_qualora_necessario__c,&apos;N/A&apos;),2,0)+ 
IF(!ISPICKVAL(Personale_dotato_di_quanto_richiesto__c,&apos;N/A&apos;),2,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Massimo Personale di Cantiere</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Tot_Max_Pres__c</fullName>
        <formula>IF(RecordType.DeveloperName==&apos;Ispezione_Sicurezza_2018_06&apos;, (IF(!ISPICKVAL(Cassetta_primo_soccorso_conforme__c ,&apos;N/A&apos;),1, 0)+ 
IF(!ISPICKVAL(CQS_Estintore_con_cartellino_e_revisione__c,&apos;N/A&apos;),1,0)), (IF(!ISPICKVAL(Cassetta_primo_soccorso_conforme__c ,&apos;N/A&apos;),2, 0)+ 
IF(!ISPICKVAL(CQS_Estintore_con_cartellino_e_revisione__c,&apos;N/A&apos;),2,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Massimo Presidi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Totale_Divisore_PunteggioDomande__c</fullName>
        <formula>(IF(ISPICKVAL(CQS_ISP_PSC__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(CQS_ISP_POS__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(CQS_ISP_Notifica_prel_corretta_valida__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(CQS_ISP_DURC_regolare__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(CQS_ISP_Attivita_Imprese_autorizzate_OF__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(CQS_ISP_Autorizzazione_amm_competente__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(CQS_ISP_Presenza_prog_cartografie_enti__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(CQS_ISP_indagini_preventive_scavo__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(CQS_ISP_Accantieramento_conforme__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Esposizione_Cartello__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_RispettoCodice_SegnaleticaStrada__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Idoneit_delimit_Cantiere_AD__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Buono_stato_cartellonistica__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_assicurata_viabilita__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Passaggi_su_scavi_idonei__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Pozzetti_non_pericolosi__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL( CQS_ISP_Presenza_WC__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(CQS_ISP_Presenti_autorizzati__c ,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Tesserino_Check__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Preposto_Cantiere_Presente__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Addetto_PS_presente__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_DPI_idonei_in_dotazione__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_DPI_lavorazioni_in_quota__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_DPI_rischio_elettrico__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(Presenza_Moviere_qualora_necessario__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(Personale_dotato_di_quanto_richiesto__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(CQS_ISP_Mezzi_Attrezzature_autorizati__c ,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_conformita_mezzi_attrezzature__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Documentazione_verifiche_legge__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Marcatura_CE__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Documentazione_noli_a_freddo__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_attrezzature_sollevamento__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(Cassetta_primo_soccorso_conforme__c ,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_Estintore_con_cartellino_e_revisione__c,&apos;N/A&apos;),0, 1)+
IF(ISPICKVAL(Autorizzazioni_ENEL_prossimit_E_Distrib__c ,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Presenza_Profili_E_Distrib__c,&apos;N/A&apos;),0, 1)+ 
IF(ISPICKVAL(CQS_ISP_Dotazione_DPI_3_Cat_eDist__c,&apos;N/A&apos;),0, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Divisore Punteggio Domande</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Totale_Documentazione_Minima__c</fullName>
        <formula>IF(RecordType.DeveloperName==&apos;Ispezione_Sicurezza_2018_06&apos;, (IF(ISPICKVAL(CQS_ISP_PSC__c,&apos;Sì&apos;),3, 0)+ 
IF(ISPICKVAL(CQS_ISP_POS__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Notifica_prel_corretta_valida__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_IspS_Presenza_riferimenti_emergenza__c,&apos;Si&apos;),1,0)+ 
IF(ISPICKVAL(CQS_IspS_Subappalto_autorizzato_OF__c,&apos;Si&apos;),3,0)+ 
IF(ISPICKVAL(CQS_ISP_Autorizzazione_amm_competente__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL(CQS_IspS_Presenza_cartografie_enti__c,&apos;Si&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_indagini_preventive_scavo__c,&apos;Sì&apos;),2,0)), (IF(ISPICKVAL(CQS_ISP_PSC__c,&apos;Sì&apos;),2, 0)+ 
IF(ISPICKVAL(CQS_ISP_POS__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Notifica_prel_corretta_valida__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL(CQS_ISP_DURC_regolare__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL(CQS_ISP_Attivita_Imprese_autorizzate_OF__c,&apos;Sì&apos;),1,0)+ 
IF(ISPICKVAL(CQS_ISP_Autorizzazione_amm_competente__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL(CQS_ISP_Presenza_prog_cartografie_enti__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL(CQS_ISP_indagini_preventive_scavo__c,&apos;Sì&apos;),2,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Documentazione Minima</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Totale_E_Distribuzione__c</fullName>
        <formula>(IF(ISPICKVAL(Autorizzazioni_ENEL_prossimit_E_Distrib__c ,&apos;Sì&apos;),1*1, 1*0)+ 
IF(ISPICKVAL(CQS_ISP_Presenza_Profili_E_Distrib__c,&apos;Sì&apos;),2*1, 2*0)+
IF(ISPICKVAL(CQS_ISP_Dotazione_DPI_3_Cat_eDist__c,&apos;Sì&apos;),3*1,3*0))</formula>
        <label>Totale E-Distribuzione</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Totale_Mezzi_Attrezzature_del__c</fullName>
        <formula>IF(RecordType.DeveloperName==&apos;Ispezione_Sicurezza_2018_06&apos;,(IF(ISPICKVAL(CQS_IspS_Autorizzati_e_presenti_nel_POS__c,&apos;Si&apos;),3,0)+
IF(ISPICKVAL(CQS_IspS_Sono_in_buono_stato__c,&apos;Si&apos;),1,0)+
IF(ISPICKVAL(CQS_IspS_Libretti_rev_mezzi_presenti__c,&apos;Si&apos;),2,0)+
IF(ISPICKVAL(CQS_ISP_Marcatura_CE__c,&apos;Sì&apos;),1,0)+
IF(ISPICKVAL(CQS_ISP_Documentazione_noli_a_freddo__c,&apos;Sì&apos;),1,0)+
IF(ISPICKVAL(CQS_ISP_attrezzature_sollevamento__c,&apos;Sì&apos;),3,0)), (IF(ISPICKVAL(CQS_ISP_Mezzi_Attrezzature_autorizati__c,&apos;Sì&apos;),3,0)+
IF(ISPICKVAL(CQS_ISP_conformita_mezzi_attrezzature__c,&apos;Sì&apos;),2,0)+
IF(ISPICKVAL(CQS_ISP_Documentazione_verifiche_legge__c,&apos;Sì&apos;),2,0)+
IF(ISPICKVAL(CQS_ISP_Marcatura_CE__c,&apos;Sì&apos;),1,0)+
IF(ISPICKVAL(CQS_ISP_Documentazione_noli_a_freddo__c,&apos;Sì&apos;),1,0)+
IF(ISPICKVAL(CQS_ISP_attrezzature_sollevamento__c,&apos;Sì&apos;),3,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Mezzi e Attrezzature</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Totale_Organizzazione_Cantiere__c</fullName>
        <formula>IF(RecordType.DeveloperName==&apos;Ispezione_Sicurezza_2018_06&apos;, (IF(ISPICKVAL(CQS_IspS_Accantieramento_conforme_a_PSC__c,&apos;Si&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Esposizione_Cartello__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_IspS_Segnaletica_stradale_suff__c,&apos;Si&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Idoneit_delimit_Cantiere_AD__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Buono_stato_cartellonistica__c,&apos;Sì&apos;),1,0)+ 
IF(ISPICKVAL(CQS_IspS_Viabilit_come_ordinanza__c,&apos;Si&apos;),2,0)+ 
IF(ISPICKVAL(CQS_IspS_Protezione_scavi_in_minitrincea__c,&apos;Si&apos;),2,0)+ 
IF(ISPICKVAL(CQS_IspS_Protezione_scavi_trad_pozzetti__c,&apos;Si&apos;),3,0)+ 
IF(ISPICKVAL(CQS_IspS_Utilizzo_DPC_rischi_particolari__c,&apos;Si&apos;),2,0)), (IF(ISPICKVAL(CQS_ISP_Accantieramento_conforme__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Esposizione_Cartello__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_RispettoCodice_SegnaleticaStrada__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Idoneit_delimit_Cantiere_AD__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Buono_stato_cartellonistica__c,&apos;Sì&apos;),1,0)+ 
IF(ISPICKVAL(CQS_ISP_assicurata_viabilita__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Passaggi_su_scavi_idonei__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Pozzetti_non_pericolosi__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL(CQS_ISP_Presenza_WC__c,&apos;Sì&apos;),1,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Organizzazione Del Cantiere</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Totale_Personale_Cantiere__c</fullName>
        <formula>IF(RecordType.DeveloperName==&apos;Ispezione_Sicurezza_2018_06&apos;, (IF(ISPICKVAL(CQS_ISP_Presenti_autorizzati__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL(CQS_ISP_Tesserino_Check__c,&apos;Sì&apos;),1,0)+ 
IF(ISPICKVAL(CQS_ISP_Preposto_Cantiere_Presente__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_IspS_Addetto_primo_soccorso_presente__c,&apos;Si&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Addetto_Antincendio_presente__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_DPI_idonei_in_dotazione__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_IspS_DPI_3_categoria_utilizzati_OK__c,&apos;Si&apos;),3,0)+ 
IF(ISPICKVAL(CQS_ISP_Presenza_Profili_E_Distrib__c,&apos;Sì&apos;),1,0)+ 
IF(ISPICKVAL(Presenza_Moviere_qualora_necessario__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_IspS_Formazione_HS_conforme_mansione__c,&apos;Si&apos;),2,0)), (IF(ISPICKVAL(CQS_ISP_Presenti_autorizzati__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL(CQS_ISP_Tesserino_Check__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Preposto_Cantiere_Presente__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Addetto_PS_presente__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_Addetto_Antincendio_presente__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_DPI_idonei_in_dotazione__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(CQS_ISP_DPI_lavorazioni_in_quota__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL(CQS_ISP_DPI_rischio_elettrico__c,&apos;Sì&apos;),3,0)+ 
IF(ISPICKVAL(Presenza_Moviere_qualora_necessario__c,&apos;Sì&apos;),2,0)+ 
IF(ISPICKVAL(Personale_dotato_di_quanto_richiesto__c,&apos;Sì&apos;),2,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Personale di Cantiere</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Totale_Presidi__c</fullName>
        <formula>IF(RecordType.DeveloperName==&apos;Ispezione_Sicurezza_2018_06&apos;, (IF(ISPICKVAL(Cassetta_primo_soccorso_conforme__c ,&apos;Sì&apos;),1, 0)+ 
IF(ISPICKVAL(CQS_Estintore_con_cartellino_e_revisione__c,&apos;Sì&apos;),1,0)),(IF(ISPICKVAL(Cassetta_primo_soccorso_conforme__c ,&apos;Sì&apos;),2, 0)+ 
IF(ISPICKVAL(CQS_Estintore_con_cartellino_e_revisione__c,&apos;Sì&apos;),2,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Totale Presidi</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_Verticale_inEsecuzione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verticale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_ISP_assicurata_viabilita__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Durante i lavori è assicurata la viabilità di persone e veicoli</inlineHelpText>
        <label>Assicurata viabilità persone e veicoli</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_attrezzature_sollevamento__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Eventuali attrezzature di sollevamento (fasce, catene, etc) sono idonee, revisionate e utilizzate in modalità corretto</inlineHelpText>
        <label>Idoneità attrezzature sollevamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_conformita_mezzi_attrezzature__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>I mezzi e le attrezzature sono in buono stato e conformi allo scopo richiesto oltre che alla normativa vigente</inlineHelpText>
        <label>Conformità mezzi e attrezzature</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_indagini_preventive_scavo__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Sono state eseguite le indagini preventive per lo scavo (tracciamento sotto-servizi, esecuzione georadar)</inlineHelpText>
        <label>Indagini preventive per scavo eseguite</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sì</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_ISP_ora_fine_sop__c</fullName>
        <defaultValue>LEFT(TEXT(TIMENOW()+ 01),5)</defaultValue>
        <label>Ora fine sopralluogo</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQS_IS_Lavorazioni_Non_Iniziati_Sospesi__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Al momento del sopralluogo le lavorazioni non erano ancora iniziate oppure erano sospese</inlineHelpText>
        <label>Lavorazioni Non Ancora Iniziati/Sospesi</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Agg_GIS_completo_corretto__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Completo e corretto aggiornamento dei sistemi informativi GIS</inlineHelpText>
        <label>Aggiornamento GIS completo/corretto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Apposizione_cartelli_cantiereOK__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Corretta apposizione della cartellonistica di cantiere</inlineHelpText>
        <label>Apposizione cartellonistica cantiere OK</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_AreaCantiere_del_stoc_materiali__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Corretta delimitazione dell’area di cantiere e stoccaggio materiali</inlineHelpText>
        <label>Area Cantiere delimitata stocc materiali</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Att_Conf_No_Segn_Var_DLL__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Conformità delle attività svolte rispetto al Progetto aggiornato e/o assenza di segnalazione preventiva di variante a DLL</inlineHelpText>
        <label>Attività Conf e/o No Segn Prev Var DLL</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Basamento_PFS__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il basamento PFS è in cls prefabbricato o in opera e altezza max 10cm</inlineHelpText>
        <label>Basamento PFS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Cambi_Bruschi_evitati__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Sono stati evitati bruschi cambi di direzione e profondità</inlineHelpText>
        <label>Cambi direzione profondità evitati</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Caratteristiche_PFS_previste_NT__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il PFS ha le caratteristiche previste nelle NT</inlineHelpText>
        <label>Caratteristiche PFS previste da NT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQS_IspQ_Caratteristiche_PTE_previste_NT__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <inlineHelpText>Il PTE ha le caratteristiche previste nelle NT</inlineHelpText>
        <label>Caratteristiche PTE previste nelle NT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>